--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,14 @@
 server:
   port: 8090
+spring:
+  mvc:
+    view:
+      prefix: /
+      suffix: .jsp
+  devtools:
+    restart:
+      enabled: true #设置开启热部署
+      additional-paths: /src/main/java #重启目录
+      exclude: WEB-INF/**
+  freemarker:
+    cache: false #页面不加载
